cmake_minimum_required(VERSION 3.24)
project(30_4_3_2_Responses_with_arguments_2)

set(CMAKE_CXX_STANDARD 23)
set(BUILD_CPR_TESTS OFF)
set(CMAKE_USE_OPENSSL OFF)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include(FetchContent)
FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git
        GIT_TAG 871ed52d350214a034f6ef8a3b8f51c5ce1bd400) # The commit hash for 1.9.0. Replace with the latest from: https://github.com/libcpr/cpr/releases
FetchContent_MakeAvailable(cpr)

add_executable(30_4_3_2_Responses_with_arguments_2 main.cpp)

target_link_libraries(30_4_3_2_Responses_with_arguments_2 PRIVATE cpr::cpr)